--- a/draft2.ipynb
+++ b/draft2.ipynb
@@ -323,7 +323,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "075df773",
+   "id": "d670bc26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "6df2c067",
+   "id": "1d0d5ed6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,14 +677,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df56cb0e",
+   "id": "afbccdac",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "4ec4a1ae",
+   "id": "48b3cccc",
    "metadata": {},
    "source": [
     "## What keywords readily identify a particular programming language?"
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "c3ed5f5c",
+   "id": "d1fa984a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "bba23f97",
+   "id": "d3fab0e0",
    "metadata": {},
    "outputs": [
     {
@@ -1241,7 +1241,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "f6e692da",
+   "id": "06f229c3",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cefe32f3",
+   "id": "1df24557",
    "metadata": {},
    "source": [
     "## Can certain word combinations / n-grams in a readme improve identification of programming languages?"
@@ -3201,7 +3201,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "94d2ae6e",
+   "id": "ce3ced4e",
    "metadata": {},
    "outputs": [
     {
@@ -3278,7 +3278,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b1397ee4",
+   "id": "f7f800c6",
    "metadata": {},
    "outputs": [
     {
@@ -3304,13 +3304,13 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "e0c6c8b1",
+   "id": "cae99536",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4158415841584158"
+       "0.39603960396039606"
       ]
      },
      "execution_count": 49,
@@ -3326,7 +3326,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "46aecc02",
+   "id": "78858d73",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3336,7 +3336,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "dc6546d3",
+   "id": "ca172676",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3346,7 +3346,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "e4dd7d43",
+   "id": "a581f113",
    "metadata": {},
    "outputs": [
     {
@@ -3370,7 +3370,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "f668e5ca",
+   "id": "b6c045b6",
    "metadata": {},
    "outputs": [
     {
@@ -3491,7 +3491,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "e4b816b4",
+   "id": "07d23599",
    "metadata": {},
    "outputs": [
     {
@@ -3512,7 +3512,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "b4241950",
+   "id": "01b37e69",
    "metadata": {},
    "outputs": [
     {
@@ -3533,7 +3533,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "8fd8ab5b",
+   "id": "190e07c7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3543,7 +3543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd981e91",
+   "id": "e2ff0e21",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3551,7 +3551,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "11d449d0",
+   "id": "302c668f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3564,7 +3564,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "81ed3ba4",
+   "id": "6419f433",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3579,7 +3579,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "cfc579b9",
+   "id": "8b38f9b0",
    "metadata": {},
    "outputs": [
     {
@@ -3626,7 +3626,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "055ce64c",
+   "id": "450abfbe",
    "metadata": {},
    "outputs": [
     {
@@ -3671,7 +3671,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "c3f93355",
+   "id": "4c70a1a4",
    "metadata": {},
    "outputs": [
     {
@@ -3716,7 +3716,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "4e2576f1",
+   "id": "94475182",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3731,7 +3731,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "7b7cfbfc",
+   "id": "2f0ca616",
    "metadata": {},
    "outputs": [
     {
@@ -3778,7 +3778,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "d550fa74",
+   "id": "c1f1b37f",
    "metadata": {},
    "outputs": [
     {
@@ -3823,7 +3823,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "864e093b",
+   "id": "f9e70194",
    "metadata": {},
    "outputs": [
     {
@@ -3868,7 +3868,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "4faf7510",
+   "id": "6372385e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3877,14 +3877,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
-   "id": "307c0a47",
+   "execution_count": 68,
+   "id": "543fa8ab",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Logistic Regression using selected features\n",
       "Accuracy of Logistic Regression classifier on training set: 0.97\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -3898,51 +3899,7 @@
       "   macro avg       0.97      0.97      0.97       303\n",
       "weighted avg       0.97      0.97      0.97       303\n",
       "\n",
-      "Accuracy of Logistic Regression classifier on test set:     0.59\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           c       0.52      0.55      0.54        20\n",
-      "         c++       0.53      0.45      0.49        22\n",
-      "        html       0.45      0.59      0.51        17\n",
-      "         php       0.80      0.73      0.76        22\n",
-      "      python       0.65      0.62      0.63        21\n",
-      "\n",
-      "    accuracy                           0.59       102\n",
-      "   macro avg       0.59      0.59      0.59       102\n",
-      "weighted avg       0.60      0.59      0.59       102\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "model.test_log(X_bow, y_train, X_test_bow, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "id": "d786ae1c",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Logistic Regression using selected features\n",
-      "Accuracy of Logistic Regression classifier on training set: 0.97\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           c       1.00      0.97      0.98        62\n",
-      "         c++       0.98      0.98      0.98        64\n",
-      "        html       1.00      0.92      0.96        49\n",
-      "         php       0.93      0.98      0.95        64\n",
-      "      python       0.95      0.98      0.97        64\n",
-      "\n",
-      "    accuracy                           0.97       303\n",
-      "   macro avg       0.97      0.97      0.97       303\n",
-      "weighted avg       0.97      0.97      0.97       303\n",
-      "\n",
-      "Accuracy of Logistic Regression classifier on validate set: 0.67\n"
+      "Accuracy of Logistic Regression classifier on validate set: 0.64\n"
      ]
     }
    ],
@@ -3953,7 +3910,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "30a6239a",
+   "id": "004031c1",
    "metadata": {},
    "outputs": [
     {
@@ -3985,7 +3942,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "b33077c3",
+   "id": "aac0cae7",
    "metadata": {},
    "outputs": [
     {
@@ -4016,8 +3973,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "id": "93cf758d",
+   "execution_count": 71,
+   "id": "bb0ab16b",
    "metadata": {},
    "outputs": [
     {
@@ -4047,8 +4004,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "3facd2f3",
+   "execution_count": 72,
+   "id": "2c9b302b",
    "metadata": {},
    "outputs": [
     {
@@ -4090,8 +4047,51 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 73,
+   "id": "a9297e55",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy of Logistic Regression classifier on training set: 0.97\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           c       1.00      0.97      0.98        62\n",
+      "         c++       0.98      0.97      0.98        64\n",
+      "        html       0.91      0.98      0.94        49\n",
+      "         php       1.00      0.98      0.99        64\n",
+      "      python       0.97      0.97      0.97        64\n",
+      "\n",
+      "    accuracy                           0.97       303\n",
+      "   macro avg       0.97      0.97      0.97       303\n",
+      "weighted avg       0.97      0.97      0.97       303\n",
+      "\n",
+      "Accuracy of Logistic Regression classifier on test set:     0.58\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           c       0.52      0.55      0.54        20\n",
+      "         c++       0.53      0.45      0.49        22\n",
+      "        html       0.45      0.59      0.51        17\n",
+      "         php       0.76      0.73      0.74        22\n",
+      "      python       0.63      0.57      0.60        21\n",
+      "\n",
+      "    accuracy                           0.58       102\n",
+      "   macro avg       0.58      0.58      0.58       102\n",
+      "weighted avg       0.59      0.58      0.58       102\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.test_log_balanced(X_bow, y_train, X_test_bow, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "694b4fb5",
+   "id": "d23c918c",
    "metadata": {},
    "outputs": [],
    "source": []
